--- a/app/views/templates/blog.html
+++ b/app/views/templates/blog.html
@@ -2,6 +2,10 @@
 {% load static %}
 <html lang="en">
     <style>
+        img {
+            max-width: 90%;
+            max-height: 90%;
+        }
         body {background-color: white;}
         body   {text-align: center; align-items: center;}
         canvas    {align-content: center;}
@@ -12,6 +16,7 @@
   <body>
     <!-- <div style="width: 500px;"><canvas id="dimensions"></canvas></div><br/> -->
     <h1>Is Austin's Red Line the Worst Train of All Time?</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Lakeline_metrorail_station_2014.jpg"></img>
     <h2>No, but it is among the worst-performing commuter rail systems in the country</h2>
     <h2>Let's compare the Red Line to other commuter rail systems in key performance metrics</h2>
     <h1>Operating Expense Per Passenger</h1>
@@ -20,29 +25,44 @@
     <div style="width: 100%;"><canvas id="chart7"></canvas></div>
     <h2>I want to try to emphasize the outsized negative impact of red line spending on Austin's transit network performance.</h2>
     <h2>The proposed rail line wasn't estimated to cost much</h2>
-    <h2>Original Estimated Annual Operating Costs (2022 Dollars)</h2>
-    <h2>$3.9 Million</h2>
-    <h2>Original Estimated Capital Costs (2022 Dollars)</h2>
-    <h2>$94 Million</h2>
+    <h2>Original Estimated Annual Operating Costs</h2>
+    <h2>$3.9 Million (2022 Dollars)</h2>
+    <h2>Original Estimated Capital Costs</h2>
+    <h2>$94 Million (2022 Dollars)</h2>
     <div>Source: <a target="_blank" href="https://docs.google.com/document/d/1qgbIg6elpBox2MPVWJ6oNZJI3-FOLQMSwBXNxYHtrnc/edit?pli=1">Austin American Statesman</a></div>
     <h1>Actual CapMetro Red Line Spending</h1>
     <div style="width: 100%;"><canvas id="chart8"></canvas></div>
     <br></br>
-    <h1>Capmetro Capital Expenditure by Mode</h1>
+    <h1>CapMetro Annual Capital Expenditure by Mode</h1>
+    <h3>(2022 Dollars)</h3>
     <div style="width: 100%;"><canvas id="chart5"></canvas></div>
-    <h1>Capmetro Operating Expenditure by Mode</h1>
+    <h1>CapMetro Annual Operating Expenditure by Mode</h1>
+    <h3>(2022 Dollars)</h3>
     <div style="width: 100%;"><canvas id="chart3"></canvas></div>
-    <h1>Capmetro Ridership By Mode</h1>
+    <h1>CapMetro Annual Ridership By Mode</h1>
+    <h3>(Unlinked Passenger Trips)</h3>
     <div style="width: 100%;"><canvas id="chart2"></canvas></div>
-    <h1>Capmetro Passenger Miles by Mode</h1>
-    <div style="width: 100%;"><canvas id="chart"></canvas></div>
-    <h1>Capmetro Cost Per Passenger Mile</h1>
-    <div style="width: 100%;"><canvas id="chart9"></canvas></div>
-    <h1>Capmetro Cost Per Passenger</h1>
-    <div style="width: 100%;"><canvas id="chart10"></canvas></div>
+    <h1>CapMetro Annual Passenger Miles Traveled by Mode</h1>
+    <div style="width: 100%;"><canvas id="chart"></canvas></div> 
     <h2>The rail expenses bear an outsized proportion of the system costs, compared to rail ridership and passenger mileage</h2>
+    <h1>CapMetro Cost Per Passenger Mile by Mode</h1>
+    <h3>(2022 Dollars per Passenger Mile Traveled)</h3>
+    <div style="width: 100%;"><canvas id="chart9"></canvas></div>
+    <h1>CapMetro Cost Per Passenger by Mode</h1>
+    <h3>(2022 Dollars per Unlinked Passenger Trip)</h3>
+    <div style="width: 100%;"><canvas id="chart10"></canvas></div>
+    <h2>You might not believe it from the above chart</h2>
+    <h2>But trains are actually supposed to be more efficient at moving people than buses.</h2>
+    <h2>Here is Denver's data for comparison</h2>
+    <h1>RTD (Denver) Cost Per Passenger Mile by Mode</h1>
+    <h3>(2022 Dollars per Passenger Mile Traveled)</h3>
+    <div style="width: 100%;"><canvas id="chart11"></canvas></div>
+    <h1>RTD (Denver) Cost Per Passenger by Mode</h1>
+    <h3>(2022 Dollars per Unlinked Passenger Trip)</h3>
+    <div style="width: 100%;"><canvas id="chart12"></canvas></div>
     <h2>Here is the most recent ridership data</h2>
     <h1>Monthly Ridership - All Time</h1>
+    <h3>(Unlinked Passenger Trips)</h3>
     <div style="width: 100%;"><canvas id="chart4"></canvas></div>
     <h2>This chart of all-time ridership appears to show a fairly sound COVID-19 recovery</h2>
     <h2>The abrupt uptick in riders in 2021 is due to a new professional sports stadium opening along the route</h2>
@@ -51,7 +71,7 @@
     <h2>But even with a new pro sports team and the being nearly the fastest growing city in America</h2>
     <h2>The Red Line will continue to have some of the worst financial effectiveness of any commuter rail system</h2>
 
-    <h2>The Operating inefficiency is on top of the quarter billion dollars in sunk capital costs</h2>
+    <h2>This obscene operating inefficiency is the cherry on top of the quarter billion dollars in sunk capital costs</h2>
     <h2>Money all dedicated to rehabbing a rail line, which 90% of the time, isn't even worth worth running. </h2>
     <h2>The bus serving, on average, 2-3X as many passenger-miles per dollar spent</h2>
     <h2>Indicates that the money dedicated to rail operations better serves the community when spent on bus hours</h2>
@@ -100,7 +120,7 @@
                                 }
                             }]
                         }
-                    }
+                    },
                     data: 
                     {
                         labels: resp.data.data.map(row => row.year),
@@ -445,7 +465,7 @@
                     labels: resp.data.data.map(row => row.agency),
                     datasets: [
                     {
-                        label: 'Cost Per Passenger Trip',
+                        label: '2022 Dollars / Unlinked Passenger Trip (2010-2011)',
                         data: resp.data.data.map(row => row.cost_per_passenger),
                         backgroundColor: resp.data.data.map(row => {
                             if (row.agency == "Capital Metropolitan Transportation Authority(CMTA)") {
@@ -516,7 +536,7 @@
                     labels: resp.data.data.map(row => row.agency),
                     datasets: [
                     {
-                        label: 'Cost Per Passenger Mile Traveled',
+                        label: '2022 Dollars Per Passenger Mile Traveled (2010-2011)',
                         data: resp.data.data.map(row => row.cost_per_passenger_mile),
                         backgroundColor: resp.data.data.map(row => {
                             if (row.agency == "Capital Metropolitan Transportation Authority(CMTA)") {
@@ -722,6 +742,135 @@
     })
 </script>
 
+
+<script>
+    const denverPmt = axios.get("https://transit.observer/cost_per_pmt_by_mode_type/?ntd_id=80006").then((resp) => {
+        const chart = new Chart(
+            document.getElementById('chart11'),
+            {
+                type: 'line',
+                options: {
+                    tooltips: {
+                    callbacks: {
+                        label: function(tooltipItem, data) {
+                            return (
+                                    `$${new Intl.NumberFormat("en-US", {
+                                        notation: "compact",
+                                        compactDisplay: "short",
+                                        }).format(tooltipItem.yLabel)} / mile`
+                                )
+                        }
+                    }
+                },
+                    scales: {
+                        yAxes: [{
+                            ticks: {
+                                // Include a dollar sign in the ticks
+                                callback: function(value, index, ticks) {
+                                    return (
+                                        `$${new Intl.NumberFormat("en-US", {
+                                            notation: "compact",
+                                            compactDisplay: "short",
+                                            }).format(value)} / mile`
+                                    )
+                                }
+                            }
+                        }]
+                    }
+                },
+                data: 
+                {
+                    labels: resp.data.data.map(row => row.year),
+                    datasets: [
+                    {
+                        label: 'Bus',
+                        data: resp.data.data.map(row => row.bus),
+                        backgroundColor: "white",
+                        borderColor: "green"
+                    },
+                    {
+                        label: 'Rail',
+                        data: resp.data.data.map(row => row.rail),
+                        backgroundColor: "white",
+                        borderColor: "red"
+                    },
+
+                    {
+                        label: 'MicroTransit',
+                        data: resp.data.data.map(row => row.microtransit),
+                        backgroundColor: "white",
+                        borderColor: "blue"
+                    }
+                    ]
+                }
+            }
+        )
+    })
+</script>
+<script>
+    const denverUpt = axios.get("https://transit.observer/cost_per_upt_by_mode_type/?ntd_id=80006").then((resp) => {
+        const chart = new Chart(
+            document.getElementById('chart12'),
+            {
+                type: 'line',
+                options: {
+                    tooltips: {
+                    callbacks: {
+                        label: function(tooltipItem, data) {
+                            return (
+                                    `$${new Intl.NumberFormat("en-US", {
+                                        notation: "compact",
+                                        compactDisplay: "short",
+                                        }).format(tooltipItem.yLabel)} / trip`
+                                    )
+                        }
+                    }
+                },
+                    scales: {
+                        yAxes: [{
+                            ticks: {
+                                // Include a dollar sign in the ticks
+                                callback: function(value, index, ticks) {
+                                    return (
+                                        `$${new Intl.NumberFormat("en-US", {
+                                            notation: "compact",
+                                            compactDisplay: "short",
+                                            }).format(value)} / trip`
+                                    )
+                                }
+                            }
+                        }]
+                    }
+                },
+                data: 
+                {
+                    labels: resp.data.data.map(row => row.year),
+                    datasets: [
+                    {
+                        label: 'Bus',
+                        data: resp.data.data.map(row => row.bus),
+                        backgroundColor: "white",
+                        borderColor: "green"
+                    },
+                    {
+                        label: 'Rail',
+                        data: resp.data.data.map(row => row.rail),
+                        backgroundColor: "white",
+                        borderColor: "red"
+                    },
+
+                    {
+                        label: 'MicroTransit',
+                        data: resp.data.data.map(row => row.microtransit),
+                        backgroundColor: "white",
+                        borderColor: "blue"
+                    }
+                    ]
+                }
+            }
+        )
+    })
+</script>
   </body>
 </html>
  
