photo credit for blog

--- a/app/views/templates/blog.html
+++ b/app/views/templates/blog.html
@@ -17,6 +17,7 @@
     <!-- <div style="width: 500px;"><canvas id="dimensions"></canvas></div><br/> -->
     <h1>Is Austin's Red Line the Worst Train of All Time?</h1>
     <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Lakeline_metrorail_station_2014.jpg"></img>
+    <div>Photo - Larry D. Moore</div>
     <h2>No, but it is among the worst-performing commuter rail systems in the country</h2>
     <h2>Let's compare the Red Line to other commuter rail systems in key performance metrics</h2>
     <h1>Operating Expense Per Passenger</h1>
