--- a/app/views/templates/blog.html
+++ b/app/views/templates/blog.html
@@ -11,7 +11,7 @@
         canvas    {align-content: center;}
         </style>
   <head>
-    <title>Chart.js example</title>
+    <title>Is Austin's Red Line the Worst Train of All Time?</title>
   </head>
   <body>
     <!-- <div style="width: 500px;"><canvas id="dimensions"></canvas></div><br/> -->
