--- a/app/views/templates/blog.html
+++ b/app/views/templates/blog.html
@@ -69,7 +69,7 @@
     <h2>The abrupt uptick in riders in 2021 is due to a new professional sports stadium opening along the route</h2>
     <h2>Perhaps the Austin FC has saved the Red Line</h2>
     <h2>We will also see an uptick when the line connects to the upcoming downtown light rail.</h2>
-    <h2>But even with a new pro sports team and the being nearly the fastest growing city in America</h2>
+    <h2>But even with a new pro sports team and being in the fastest growing city in America</h2>
     <h2>The Red Line will continue to have some of the worst financial effectiveness of any commuter rail system</h2>
 
     <h2>This obscene operating inefficiency is the cherry on top of the quarter billion dollars in sunk capital costs</h2>
