--- a/app/views/templates/address.html
+++ b/app/views/templates/address.html
@@ -18,8 +18,9 @@
         }
       function address() {
         let inputValue = document.getElementById("addr").value;
-        axios.get("https://nominatim.openstreetmap.org/search.php?q=" + inputValue, {headers: headers}).then((resp)=>{
-            console.log(resp.data)
+        axios.get("https://nominatim.openstreetmap.org/search.php?q=" + inputValue + "&format=json", {headers: headers}).then((resp)=>{
+            console.log(resp.data[0].lat, resp.data[0].lon);
+            window.location.href = "/get_closest_bus_stops/?lat=" + resp.data[0].lat + "&lon=" + resp.data[0].lon;
         })
       }
 </script>
