fix copy on busfinder

--- a/app/views/templates/address.html
+++ b/app/views/templates/address.html
@@ -1,6 +1,7 @@
 <html>
     {% load static %}
-    <h1>Enter your address or a description of your location</h1>
+    <h1>Austin Bus Finder</h1>
+    <h2>Enter your address or a description of your location</h2>
     <input type="text" id="addr" placeholder="barton springs pool, austin">
     <button type="button" onclick="address()">
         Search for your next bus
