--- a/app/views/templates/capmetro.html
+++ b/app/views/templates/capmetro.html
@@ -2,6 +2,8 @@
    
 {% load static %}
 <html>
+    
+<h1 style="text-align:center;padding:30px">Search Capmetro Ridership And Service By Route</h1>
 <div style="display:flex">
 
     <div style="width:100%">
@@ -645,7 +647,6 @@
                         },
                             scales: {
                                 yAxes: [{
-                                    label: "Riders",
                                     ticks: {
                                         // Include a dollar sign in the ticks
                                         callback: function(value, index, ticks) {
@@ -667,7 +668,7 @@
                             {
                                 label: 'Monthly Passenger Trips',
                                 data: resp.data.data.map(row => row.riders),
-                                backgroundColor: "white",
+                                backgroundColor: "grey",
                                 borderColor: "black"
                             },
                             ]
@@ -732,7 +733,7 @@
                             {
                                 label: 'Vehicle Revenue Hours',
                                 data: resp.data.data.map(row => row.revenue_hours),
-                                backgroundColor: "white",
+                                backgroundColor: "grey",
                                 borderColor: "black"
                             },
                             ]
@@ -797,7 +798,7 @@
                             {
                                 label: 'Vehicle Revenue Miles',
                                 data: resp.data.data.map(row => row.revenue_miles),
-                                backgroundColor: "white",
+                                backgroundColor: "grey",
                                 borderColor: "black"
                             },
                             ]
